@@ -1,5 +1,13 @@
 # $Id$
 
+2006-04-26	Konstantin V. Arkhipov
+
+	* meta/classes/MetaClassProperty.class.php: hacky support for
+	unsupported boolean type at MySQL.
+
+	* core/OSQL/InsertOrUpdateQuery.class.php,
+	core/OSQL/UpdateQuery.class.php: do not quote boolean values.
+
 2006-04-25	Anton E. Lebedevich
 
 	* main/Utils/TextUtils.class.php: added friendlyFileSize() method.
